@@ -8,6 +8,8 @@ Version 4.0-1
  
  o Fixed a bug in predictorEffects with polym use to specify multivariate polynomials.
  
+ o Replace confint argument to Effect() with se; confint now a legacy argument.
+ 
  o Small fixes/improvements.
 
 Version 4.0-0
